@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import rocket.jobrocketbackend.answer.entity.AnswerEntity;
+import rocket.jobrocketbackend.answer.exception.AnswerNotFoundException;
 import rocket.jobrocketbackend.answer.service.AnswerService;
 import rocket.jobrocketbackend.common.entity.Category;
 import rocket.jobrocketbackend.question.personal.dto.response.PersonalResDto;
@@ -11,6 +12,7 @@ import rocket.jobrocketbackend.question.personal.entity.PersonalEntity;
 import rocket.jobrocketbackend.question.personal.repository.PersonalRepository;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,18 +26,19 @@ public class PersonalService {
         List<PersonalEntity> personalEntities = personalRepository.findAll();
         return personalEntities.stream()
                 .map(entity -> convertToDto(entity, memberId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private PersonalResDto convertToDto(PersonalEntity entity, Long memberId) {
-        AnswerEntity answerEntity = answerService.findAnswerByMemberAndQid(memberId, Category.PERSONAL, entity.getQid());
+        Optional<AnswerEntity> optionalAnswerEntity = answerService.findAnswerByMemberAndQid(memberId, Category.PERSONAL, entity.getQid());
+        AnswerEntity answerEntity = optionalAnswerEntity.orElse(null);
 
         return PersonalResDto.builder()
                 .qid(entity.getQid())
                 .question(entity.getQuestion())
-                .answer(answerEntity.getContent())
-                .answerId(answerEntity.getAnswerId())
-                .isIn(answerEntity.isIn())
+                .answer(answerEntity != null ? answerEntity.getContent() : null)
+                .answerId(answerEntity != null ? answerEntity.getAnswerId() : null)
+                .isIn(answerEntity != null && answerEntity.isIn())
                 .build();
     }
 }
